--- a/movies-imdb/src/Styles/css/Header.css
+++ b/movies-imdb/src/Styles/css/Header.css
@@ -1,5 +1,11 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .wrapper {
-  background: #202020;
+  height: 11vh;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), black);
   display: flex;
 }
 
@@ -8,9 +14,131 @@
   margin: 10%;
 }
 
-@media (min-width: 768px) {
+.header__div--background {
+  width: 100%;
+  height: 89vh;
+  display: flex;
+  flex-direction: column;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.98), rgba(0, 0, 0, 0.4)), url(https://wallpaperstream.com/wallpapers/thumbnails/avengers-infinity-war/Avengers-Infinity-War-Full-Casts-Poster_thumb2x.jpg);
+  background-position: center;
+  background-size: cover;
+  justify-content: space-evenly;
+}
+
+.header__h1 {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: #f0f0f0;
+  text-shadow: 1px 1px #1d1d1d;
+}
+
+.header__p {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  width: 75%;
+  color: #f0f0f0;
+  text-shadow: 1px 1px #1d1d1d;
+  font-size: 20px;
+}
+
+@media (max-width: 750px) {
+  .header__h1 {
+    font-size: 28px;
+  }
+  .header__p {
+    font-size: 18px;
+  }
+}
+
+.searchbar__nav {
+  background: #191b1b;
+}
+
+.searchbar__nav input {
+  border: #363535;
+  display: flex;
+}
+
+.movies__h1 {
+  text-align: center;
+  text-shadow: 1px 1px #1d1d1d;
+}
+
+.movies {
+  display: grid;
+  grid-template-columns: repeat(5, 4fr);
+  grid-gap: 40px;
+}
+
+.movies__element {
+  animation: animateGrid 0.5s;
+  justify-self: center;
+  border: 1px solid #e1e1e1;
+  box-shadow: 2px 2px 5px #191a1b;
+  border-radius: 5%;
+}
+
+@keyframes animateGrid {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@media screen and (max-width: 1177px) {
+  .movies {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media screen and (max-width: 937px) {
+  .movies {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 695px) {
+  .movies {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 501px) {
+  .movies {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media screen and (min-width: 410px) and (max-width: 412px) {
   .wrapper img {
-    width: 120%;
+    width: 80%;
+  }
+}
+
+@media screen and (min-width: 319px) and (max-width: 321px) {
+  .header__h1 {
+    font-size: 20px;
+  }
+  .header__p {
+    font-size: 15px;
+  }
+}
+
+@media screen and (min-width: 374px) and (max-width: 376px) {
+  .wrapper img {
+    width: 85%;
+  }
+}
+
+@media screen and (min-width: 1023px) and (max-width: 1025px) {
+  .wrapper img {
+    width: 250%;
+  }
+  .header__h1 {
+    font-size: 55px;
+  }
+  .header__p {
+    font-size: 35px;
   }
 }
 /*# sourceMappingURL=Header.css.map */
