--- a/movies-imdb/src/Styles/Header.scss
+++ b/movies-imdb/src/Styles/Header.scss
@@ -53,10 +53,9 @@ body {
 }
 
 .searchbar__nav {
-    background: rgb(25, 27, 27);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.397), white);
 }
 .searchbar__nav input {
-    border: rgb(54, 53, 53);
     display: flex;
 }
 
@@ -69,11 +68,18 @@ body {
     grid-template-columns: repeat(5, 4fr);
     grid-gap: 40px;
 }
+.film {
+    background-image: linear-gradient(
+        to bottom,
+        rgb(250, 250, 250),
+        rgb(165, 165, 165)
+    );
+}
 .movies__element {
     animation: animateGrid 0.5s;
     justify-self: center;
     border: 1px solid rgb(225, 225, 225);
-    box-shadow: 2px 2px 5px rgb(25, 26, 27);
+    box-shadow: 2px 2px 5px #646464;
     border-radius: 5%;
 }
 @keyframes animateGrid {
