--- a/movies-imdb/src/Styles/css/Header.css
+++ b/movies-imdb/src/Styles/css/Header.css
@@ -49,11 +49,10 @@ body {
 }
 
 .searchbar__nav {
-  background: #191b1b;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.397), white);
 }
 
 .searchbar__nav input {
-  border: #363535;
   display: flex;
 }
 
@@ -68,11 +67,15 @@ body {
   grid-gap: 40px;
 }
 
+.film {
+  background-image: linear-gradient(to bottom, #fafafa, #a5a5a5);
+}
+
 .movies__element {
   animation: animateGrid 0.5s;
   justify-self: center;
   border: 1px solid #e1e1e1;
-  box-shadow: 2px 2px 5px #191a1b;
+  box-shadow: 2px 2px 5px #646464;
   border-radius: 5%;
 }
 
