--- a/movies-imdb/src/Styles/css/Header.css
+++ b/movies-imdb/src/Styles/css/Header.css
@@ -3,18 +3,18 @@ body {
   padding: 0;
 }
 
-.wrapper {
+header {
   height: 11vh;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), black);
   display: flex;
 }
 
-.wrapper img {
+header img {
   width: 100%;
   margin: 10%;
 }
 
-.header__div--background {
+.Poster {
   width: 100%;
   height: 89vh;
   display: flex;
@@ -25,13 +25,13 @@ body {
   justify-content: space-evenly;
 }
 
-.header__h1 {
+.Poster__h1 {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: #f0f0f0;
   text-shadow: 1px 1px #1d1d1d;
 }
 
-.header__p {
+.Poster__p {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   width: 75%;
   color: #f0f0f0;
@@ -40,20 +40,21 @@ body {
 }
 
 @media (max-width: 750px) {
-  .header__h1 {
+  .Poster__h1 {
     font-size: 28px;
   }
-  .header__p {
+  .Poster__p {
     font-size: 18px;
   }
 }
 
-.searchbar__nav {
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.397), white);
+.SearchBox {
+  background-image: linear-gradient(to bottom, #66666647, white);
 }
 
-.searchbar__nav input {
+.SearchBox input {
   display: flex;
+  box-shadow: 6px 4px 5px #969696;
 }
 
 .movies__h1 {
@@ -68,7 +69,7 @@ body {
 }
 
 .film {
-  background-image: linear-gradient(to bottom, #fafafa, #a5a5a5);
+  background-image: linear-gradient(to bottom, white, #a5a5a5);
 }
 
 .movies__element {
@@ -77,6 +78,7 @@ body {
   border: 1px solid #e1e1e1;
   box-shadow: 2px 2px 5px #646464;
   border-radius: 5%;
+  cursor: pointer;
 }
 
 @keyframes animateGrid {
@@ -113,34 +115,34 @@ body {
 }
 
 @media screen and (min-width: 410px) and (max-width: 412px) {
-  .wrapper img {
+  header img {
     width: 80%;
   }
 }
 
 @media screen and (min-width: 319px) and (max-width: 321px) {
-  .header__h1 {
+  .Poster__h1 {
     font-size: 20px;
   }
-  .header__p {
+  .Poster__p {
     font-size: 15px;
   }
 }
 
 @media screen and (min-width: 374px) and (max-width: 376px) {
-  .wrapper img {
+  header img {
     width: 85%;
   }
 }
 
 @media screen and (min-width: 1023px) and (max-width: 1025px) {
-  .wrapper img {
+  header img {
     width: 250%;
   }
-  .header__h1 {
+  .Poster__h1 {
     font-size: 55px;
   }
-  .header__p {
+  .Poster__p {
     font-size: 35px;
   }
 }
