--- a/movies-imdb/src/Styles/css/Main.css
+++ b/movies-imdb/src/Styles/css/Main.css
@@ -3,81 +3,137 @@ body {
   padding: 0;
 }
 
-body {
-  margin: 0;
-  padding: 0;
+@media screen and (min-width: 374px) and (max-width: 376px) {
+  header img {
+    width: 85%;
+  }
 }
 
-.wrapper {
+@media screen and (min-width: 410px) and (max-width: 412px) {
+  header img {
+    width: 80%;
+  }
+}
+
+@media screen and (min-width: 1023px) and (max-width: 1025px) {
+  header img {
+    width: 250%;
+  }
+}
+
+header {
   height: 11vh;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), black);
   display: flex;
 }
 
-.wrapper img {
+header img {
   width: 100%;
   margin: 10%;
 }
 
-.header__div--background {
-  width: 100%;
-  height: 89vh;
-  display: flex;
-  flex-direction: column;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.98), rgba(0, 0, 0, 0.4)), url(https://wallpaperstream.com/wallpapers/thumbnails/avengers-infinity-war/Avengers-Infinity-War-Full-Casts-Poster_thumb2x.jpg);
-  background-position: center;
-  background-size: cover;
-  justify-content: space-evenly;
-}
-
-.header__h1 {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  color: #f0f0f0;
-  text-shadow: 1px 1px #1d1d1d;
-}
-
-.header__p {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  width: 75%;
-  color: #f0f0f0;
-  text-shadow: 1px 1px #1d1d1d;
-  font-size: 20px;
+@media screen and (min-width: 319px) and (max-width: 321px) {
+  .Poster__h1 {
+    font-size: 20px;
+  }
+  .Poster__p {
+    font-size: 15px;
+  }
 }
 
 @media (max-width: 750px) {
-  .header__h1 {
+  .Poster__h1 {
     font-size: 28px;
   }
-  .header__p {
+  .Poster__p {
     font-size: 18px;
   }
 }
 
-.searchbar__nav {
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.397), white);
+@media screen and (min-width: 1023px) and (max-width: 1025px) {
+  .Poster__h1 {
+    font-size: 55px;
+  }
+  .Poster__p {
+    font-size: 35px;
+  }
 }
 
-.searchbar__nav input {
+.Poster {
+  width: 100%;
+  height: 89vh;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.98), rgba(0, 0, 0, 0.4)), url(https://wallpaperstream.com/wallpapers/thumbnails/avengers-infinity-war/Avengers-Infinity-War-Full-Casts-Poster_thumb2x.jpg);
+  background-position: center;
+  background-size: cover;
   display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
-.movies__h1 {
+.Poster__h1 {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: #f0f0f0;
+  text-shadow: 1px 1px #1d1d1d;
+}
+
+.Poster__p {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 20px;
+  width: 75%;
+  color: #f0f0f0;
+  text-shadow: 1px 1px #1d1d1d;
+}
+
+.SearchBox {
+  background-image: linear-gradient(to bottom, #66666647, white);
+}
+
+.SearchBox input {
+  display: flex;
+  box-shadow: 6px 4px 5px #969696;
+}
+
+@media screen and (max-width: 501px) {
+  .Movies {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media screen and (max-width: 695px) {
+  .Movies {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 937px) {
+  .Movies {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 1177px) {
+  .Movies {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.Movies {
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.Movies__h1 {
   text-align: center;
   text-shadow: 1px 1px #1d1d1d;
 }
 
-.movies {
+.Movies__Elements {
   display: grid;
   grid-template-columns: repeat(5, 4fr);
   grid-gap: 40px;
 }
 
-.film {
-  background-image: linear-gradient(to bottom, #fafafa, #a5a5a5);
-}
-
-.movies__element {
-  animation: animateGrid 0.5s;
+.Movies__Elements--img {
+  animation: AnimateGrid 0.5s;
   justify-self: center;
   border: 1px solid #e1e1e1;
   box-shadow: 2px 2px 5px #646464;
@@ -85,69 +141,12 @@ body {
   cursor: pointer;
 }
 
-@keyframes animateGrid {
+@keyframes AnimateGrid {
   from {
     opacity: 0;
   }
   to {
     opacity: 1;
-  }
-}
-
-@media screen and (max-width: 1177px) {
-  .movies {
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
-
-@media screen and (max-width: 937px) {
-  .movies {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-@media screen and (max-width: 695px) {
-  .movies {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (max-width: 501px) {
-  .movies {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
-
-@media screen and (min-width: 410px) and (max-width: 412px) {
-  .wrapper img {
-    width: 80%;
-  }
-}
-
-@media screen and (min-width: 319px) and (max-width: 321px) {
-  .header__h1 {
-    font-size: 20px;
-  }
-  .header__p {
-    font-size: 15px;
-  }
-}
-
-@media screen and (min-width: 374px) and (max-width: 376px) {
-  .wrapper img {
-    width: 85%;
-  }
-}
-
-@media screen and (min-width: 1023px) and (max-width: 1025px) {
-  .wrapper img {
-    width: 250%;
-  }
-  .header__h1 {
-    font-size: 55px;
-  }
-  .header__p {
-    font-size: 35px;
   }
 }
 /*# sourceMappingURL=Main.css.map */
