--- a/movies-imdb/src/Styles/Home/_Movies.scss
+++ b/movies-imdb/src/Styles/Home/_Movies.scss
@@ -1,26 +1,3 @@
-@media screen and (max-width: 501px) {
-    .Movies {
-        grid-template-columns: repeat(1, 1fr);
-    }
-}
-@media screen and (max-width: 695px) {
-    .Movies {
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
-@media screen and (max-width: 937px) {
-    .Movies {
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
-@media screen and (max-width: 1177px) {
-    .Movies {
-        grid-template-columns: repeat(4, 1fr);
-    }
-}
-.Movies {
-    grid-template-columns: repeat(5, 1fr);
-}
 .Movies__h1 {
     text-align: center;
     text-shadow: 1px 1px #1d1d1d;
@@ -44,5 +21,25 @@
     }
     to {
         opacity: 1;
+    }
+}
+@media screen and (max-width: 1177px) {
+    .Movies__Elements {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+@media screen and (max-width: 937px) {
+    .Movies__Elements {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+@media screen and (max-width: 695px) {
+    .Movies__Elements {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media screen and (max-width: 501px) {
+    .Movies__Elements {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
