--- a/movies-imdb/src/Styles/Home/_Poster.scss
+++ b/movies-imdb/src/Styles/Home/_Poster.scss
@@ -1,4 +1,4 @@
-.Poster {
+.poster {
     width: 100%;
     height: 89vh;
     background-image: linear-gradient(
@@ -13,12 +13,12 @@
     flex-direction: column;
     justify-content: space-evenly;
 }
-.Poster__h1 {
+.poster__h1 {
     font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     color: rgb(240, 240, 240);
     text-shadow: 1px 1px #1d1d1d;
 }
-.Poster__p {
+.poster__p {
     font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     font-size: 1.2rem;
     width: 75%;
@@ -26,26 +26,26 @@
     text-shadow: 1px 1px #1d1d1d;
 }
 @media screen and (min-width: 1023px) and (max-width: 1025px) {
-    .Poster__h1 {
+    .poster__h1 {
         font-size: 2.8rem;
     }
-    .Poster__p {
+    .poster__p {
         font-size: 1.2rem;
     }
 }
 @media (max-width: 750px) {
-    .Poster__h1 {
+    .poster__h1 {
         font-size: 1.65rem;
     }
-    .Poster__p {
+    .poster__p {
         font-size: 1.1rem;
     }
 }
 @media screen and (min-width: 319px) and (max-width: 321px) {
-    .Poster__h1 {
+    .poster__h1 {
         font-size: 1.2rem;
     }
-    .Poster__p {
+    .poster__p {
         font-size: 0.75rem;
     }
 }
