--- a/movies-imdb/src/Styles/Home/_SearchBox.scss
+++ b/movies-imdb/src/Styles/Home/_SearchBox.scss
@@ -1,7 +1,7 @@
-.SearchBox {
+.searchbox {
     background-image: linear-gradient(to bottom, #66666647, white);
 }
-.SearchBox input {
+.searchbox input {
     display: flex;
     box-shadow: 6px 4px 5px #969696;
 }
