--- a/movies-imdb/src/Styles/Home/_Poster.scss
+++ b/movies-imdb/src/Styles/Home/_Poster.scss
@@ -1,3 +1,9 @@
+@mixin posterText {
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    color: rgb(240, 240, 240);
+    text-shadow: 1px 1px #1d1d1d;
+}
+
 .poster {
     width: 100%;
     height: 89vh;
@@ -14,16 +20,12 @@
     justify-content: space-evenly;
 }
 .poster__h1 {
-    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-    color: rgb(240, 240, 240);
-    text-shadow: 1px 1px #1d1d1d;
+    @include posterText();
 }
 .poster__p {
-    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    @include posterText();
     font-size: 1.2rem;
     width: 75%;
-    color: rgb(240, 240, 240);
-    text-shadow: 1px 1px #1d1d1d;
 }
 @media screen and (min-width: 1023px) and (max-width: 1025px) {
     .poster__h1 {
