--- a/movies-imdb/src/Styles/_Footer.scss
+++ b/movies-imdb/src/Styles/_Footer.scss
@@ -1,9 +1,15 @@
+$center: center;
+@mixin hoverButtons {
+    color: #fff;
+    transition: 0.5s;
+}
+
 footer {
     background: #2b2b2b;
     display: flex;
 }
 .footer__links {
-    justify-content: center;
+    justify-content: $center;
     border-bottom: 1px solid #545454;
 }
 .footer__links a {
@@ -12,47 +18,41 @@ footer {
 .footer__links a[name="instagram"] {
     color: #e1306c;
     &:hover {
-        color: #fff;
-        transition: 0.5s;
+        @include hoverButtons();
     }
 }
 .footer__links a[name="twitter"] {
     color: #00acee;
     &:hover {
-        color: #fff;
-        transition: 0.5s;
+        @include hoverButtons();
     }
 }
 .footer__links a[name="telegram"] {
     color: #0088cc;
     &:hover {
-        color: #fff;
-        transition: 0.5s;
+        @include hoverButtons();
     }
 }
 .footer__links a[name="mail"] {
     color: #dc483c;
     &:hover {
-        color: #fff;
-        transition: 0.5s;
+        @include hoverButtons();
     }
 }
 .footer__links a[name="linkedin"] {
     color: #0e76a8;
     &:hover {
-        color: #fff;
-        transition: 0.5s;
+        @include hoverButtons();
     }
 }
 .footer__links a[name="github"] {
     color: #484646;
     &:hover {
-        color: #fff;
-        transition: 0.5s;
+        @include hoverButtons();
     }
 }
 .footer__h4 {
     color: #646464;
-    justify-content: center;
+    justify-content: $center;
     padding: 8px;
 }
