The Implementation of The Loading Button

--- a/movies-imdb/src/Styles/Home/_LoadButton.scss
+++ b/movies-imdb/src/Styles/Home/_LoadButton.scss
@@ -1,5 +1,5 @@
 $whiteColor: #ffffff;
-$movies__button--load: #00d35e;
+$movies__button--load: #16d47b;
 
 .movies__button button {
     color: $whiteColor;
