The Implementation of The Spinner Button

--- a/movies-imdb/src/Styles/Home/_Spinner.scss
+++ b/movies-imdb/src/Styles/Home/_Spinner.scss
@@ -1,8 +1,8 @@
-$grayColor: #f3f3f3;
+$whiteColor: #ffffff;
 $greenColor: #16d47b;
 
 .loading__button {
-    border: 5px solid $grayColor;
+    border: 5px solid $whiteColor;
     border-top: 5px solid $greenColor;
     border-radius: 50%;
     width: 50px;
