--- a/movies-imdb/src/Styles/css/Main.css
+++ b/movies-imdb/src/Styles/css/Main.css
@@ -158,7 +158,7 @@ header img {
 }
 
 .loading__button {
-  border: 5px solid #f3f3f3;
+  border: 5px solid #ffffff;
   border-top: 5px solid #16d47b;
   border-radius: 50%;
   width: 50px;
