--- a/movies-imdb/src/Styles/css/Main.css
+++ b/movies-imdb/src/Styles/css/Main.css
@@ -103,6 +103,7 @@ header img {
   display: grid;
   grid-template-columns: repeat(5, 4fr);
   grid-gap: 40px;
+  justify-items: center;
   margin-bottom: 20px;
 }
 
