Implement The Sorting

--- a/movies-imdb/src/Styles/css/Main.css
+++ b/movies-imdb/src/Styles/css/Main.css
@@ -84,6 +84,24 @@ header img {
   }
 }
 
+.sort {
+  display: flex;
+  background: linear-gradient(to bottom, #fff, #66666647);
+}
+
+.sort {
+  margin-top: 1.2rem;
+  justify-content: center;
+}
+
+.sort i {
+  font-size: 1.5rem;
+  margin: 6px;
+  padding: 3px;
+  border: 1px solid black;
+  border-radius: 4px;
+}
+
 .searchbox {
   background-image: linear-gradient(to bottom, #66666647, #ffffff);
 }
