--- a/movies-imdb/src/Styles/_Home.scss
+++ b/movies-imdb/src/Styles/_Home.scss
@@ -1,4 +1,5 @@
 @import "./Home/Poster";
+@import "./Home/Sort";
 @import "./Home/SearchBox";
 @import "./Home/Movies";
 @import "./Home/LoadButton";
