--- a/movies-imdb/src/Styles/css/Main.css
+++ b/movies-imdb/src/Styles/css/Main.css
@@ -102,6 +102,15 @@ header img {
   border-radius: 4px;
 }
 
+.sort i:hover {
+  transform: translate(0px, -5px);
+  transition: ease-out 0.5s;
+}
+
+.sort i:active {
+  background: #c7c7c7;
+}
+
 .searchbox {
   background-image: linear-gradient(to bottom, #66666647, #ffffff);
 }
