Implement The Sorting

--- a/movies-imdb/src/Styles/Home/_Sort.scss
+++ b/movies-imdb/src/Styles/Home/_Sort.scss
@@ -1,10 +1,12 @@
+$whiteColor: #ffffff;
+
 .sort {
+    background: linear-gradient(to bottom, $whiteColor, #66666647);
     display: flex;
-    background: linear-gradient(to bottom, #fff, #66666647);
 }
 .sort {
-    margin-top: 1.2rem;
     justify-content: center;
+    margin-top: 1.2rem;
 }
 .sort i {
     font-size: 1.5rem;
