--- a/movies-imdb/src/Styles/_Header.scss
+++ b/movies-imdb/src/Styles/_Header.scss
@@ -8,21 +8,6 @@ header {
     display: flex;
 }
 header img {
-    width: 100%;
-    margin: 10%;
-}
-@media screen and (min-width: 1023px) and (max-width: 1025px) {
-    header img {
-        width: 250%;
-    }
-}
-@media screen and (min-width: 410px) and (max-width: 412px) {
-    header img {
-        width: 80%;
-    }
-}
-@media screen and (min-width: 374px) and (max-width: 376px) {
-    header img {
-        width: 85%;
-    }
+    width: 20%;
+    margin: 3% 5%;
 }
