--- a/movies-imdb/src/Styles/css/Main.css
+++ b/movies-imdb/src/Styles/css/Main.css
@@ -25,45 +25,17 @@ header img {
   justify-content: space-evenly;
 }
 
-.poster__h1 {
+.poster__title {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: #f0f0f0;
   text-shadow: 1px 1px #1d1d1d;
 }
 
-.poster__p {
+.poster__overview {
+  width: 80%;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: #f0f0f0;
   text-shadow: 1px 1px #1d1d1d;
-  font-size: 1.2rem;
-  width: 75%;
-}
-
-@media screen and (min-width: 1023px) and (max-width: 1025px) {
-  .poster__h1 {
-    font-size: 2.8rem;
-  }
-  .poster__p {
-    font-size: 1.2rem;
-  }
-}
-
-@media (max-width: 750px) {
-  .poster__h1 {
-    font-size: 1.65rem;
-  }
-  .poster__p {
-    font-size: 1.1rem;
-  }
-}
-
-@media screen and (min-width: 319px) and (max-width: 321px) {
-  .poster__h1 {
-    font-size: 1.2rem;
-  }
-  .poster__p {
-    font-size: 0.75rem;
-  }
 }
 
 .sort {
