Refactoring The Sort Component

--- a/movies-imdb/src/Styles/Home/_Sort.scss
+++ b/movies-imdb/src/Styles/Home/_Sort.scss
@@ -1,14 +1,14 @@
 $whiteColor: #ffffff;
 
-.sort {
+.sorting {
     background: linear-gradient(to bottom, $whiteColor, #66666647);
     display: flex;
 }
-.sort {
+.sorting {
     justify-content: center;
     margin-top: 1.2rem;
 }
-.sort i {
+.sorting i {
     font-size: 1.5rem;
     margin: 6px;
     padding: 3px;
