--- a/movies-imdb/src/Styles/Home/_Sort.scss
+++ b/movies-imdb/src/Styles/Home/_Sort.scss
@@ -7,7 +7,7 @@ $whiteColor: #ffffff;
     margin-top: 1.2rem;
 }
 .sorting__button {
-    &:hover :nth-child(1) {
+    &:hover :first-child {
         transform: translate(0px, -5px);
         transition: ease-out 0.5s;
     }
