Refactoring The Movies Component

--- a/movies-imdb/src/Styles/Home/_Movies.scss
+++ b/movies-imdb/src/Styles/Home/_Movies.scss
@@ -1,37 +1,26 @@
 $whiteColor: #ffffff;
 $center: center;
 
-.movies__h1 {
+.movies {
+    background-image: radial-gradient(circle, #d3d3d3, $whiteColor);
+}
+.movies__title {
     text-align: $center;
     text-shadow: 1px 1px #1d1d1d;
 }
 .movies__elements {
-    background-image: radial-gradient(circle, #d3d3d3, $whiteColor);
     display: grid;
     grid-template-columns: repeat(5, 4fr);
     grid-gap: 40px;
     justify-items: center;
     margin-bottom: 20px;
 }
-.movies__elements1 {
-    display: grid;
-    grid-template-columns: repeat(4, 4fr);
-    grid-gap: 40px;
-    background-image: radial-gradient(circle, #d3d3d3, $whiteColor);
-    justify-items: center;
-    margin-bottom: 20px;
-}
-.movie-actor {
-    display: flex;
-    flex-shrink: 2;
-    background: gray;
-}
 .movies__elements--img {
     animation: AnimateGrid 0.5s;
     justify-self: $center;
     border: 1px solid rgb(225, 225, 225);
-    box-shadow: 2px 2px 5px #646464;
     border-radius: 5%;
+    box-shadow: 2px 2px 5px #646464;
     cursor: pointer;
 }
 @keyframes AnimateGrid {
@@ -64,4 +53,20 @@ $center: center;
     .movies__elements > img {
         width: 90%;
     }
+}
+
+////// Movie Component
+
+.movies__elements1 {
+    background-image: radial-gradient(circle, #d3d3d3, $whiteColor);
+    display: grid;
+    grid-template-columns: repeat(4, 4fr);
+    grid-gap: 40px;
+    justify-items: center;
+    margin-bottom: 20px;
+}
+.movie-actor {
+    background: gray;
+    display: flex;
+    flex-shrink: 2;
 }
