Refactoring The SearchBox Component

--- a/movies-imdb/src/Styles/Home/_SearchBox.scss
+++ b/movies-imdb/src/Styles/Home/_SearchBox.scss
@@ -2,4 +2,7 @@
     background: #eaeaea;
     border: 1px solid #a8a8a8;
     box-shadow: 6px 4px 5px #969696;
+    &:focus {
+        background: #c5c5c5;
+    }
 }
