--- a/movies-imdb/src/Styles/Home/_Sort.scss
+++ b/movies-imdb/src/Styles/Home/_Sort.scss
@@ -12,9 +12,13 @@ $whiteColor: #ffffff;
     }
 }
 .sorting i {
+    color: white;
     font-size: 1.5rem;
     margin: 6px;
     padding: 3px;
-    border: 1px solid black;
+    border: 1px solid $whiteColor;
     border-radius: 4px;
+}
+.sorting__title {
+    color: white;
 }
