Refactoring The Footer Component

--- a/movies-imdb/src/Styles/_Footer.scss
+++ b/movies-imdb/src/Styles/_Footer.scss
@@ -50,7 +50,7 @@ footer {
         @include hoverButtons();
     }
 }
-.footer__h4 {
+.footer__text {
     color: #646464;
     justify-content: $center;
     padding: 8px;
