--- a/movies-imdb/src/Styles/Home/_Spinner.scss
+++ b/movies-imdb/src/Styles/Home/_Spinner.scss
@@ -1,7 +1,7 @@
 $whiteColor: #ffffff;
 $greenColor: #16d47b;
 
-.loading {
+.loading__icon {
     border: 5px solid $whiteColor;
     border-top: 5px solid $greenColor;
     border-radius: 50%;
