Refactoring The LoadButton Component

--- a/movies-imdb/src/Styles/Home/_LoadButton.scss
+++ b/movies-imdb/src/Styles/Home/_LoadButton.scss
@@ -1,7 +1,7 @@
 $whiteColor: #ffffff;
 $movies__button--load: #16d47b;
 
-.movies__button button {
+.loadmore__button button {
     color: $whiteColor;
     background: $movies__button--load;
     margin-bottom: 12px;
