Changing The Styles

--- a/movies-imdb/src/Styles/Main.scss
+++ b/movies-imdb/src/Styles/Main.scss
@@ -4,6 +4,6 @@ body {
 }
 
 @import "_Header";
-@import "./Home/_Home";
-@import "./MoviePage/_MoviePage";
+@import "./Home/Main/_Home";
+@import "./MoviePage/Main/_MoviePage";
 @import "_Footer";
