--- a/movies-imdb/src/Styles/Home/_Movies.scss
+++ b/movies-imdb/src/Styles/Home/_Movies.scss
@@ -8,6 +8,13 @@ $center: center;
     text-align: $center;
     text-shadow: 1px 1px #1d1d1d;
 }
+.movies__element {
+    &:hover {
+        transform: translate(0px, -5px);
+        transition: ease-out 0.5s;
+        box-shadow: 5px 5px 5px black;
+    }
+}
 .movies__elements {
     display: grid;
     grid-template-columns: repeat(5, 4fr);
