Making The Not Found Component

--- a/movies-imdb/src/Styles/Main.scss
+++ b/movies-imdb/src/Styles/Main.scss
@@ -2,8 +2,8 @@ body {
     margin: 0;
     padding: 0;
 }
-
 @import "_Header";
 @import "./Home/Main/_Home";
 @import "./MoviePage/Main/_MoviePage";
 @import "_Footer";
+@import "_NotFound";
