--- a/movies-imdb/src/Styles/Home/_Sort.scss
+++ b/movies-imdb/src/Styles/Home/_Sort.scss
@@ -4,6 +4,7 @@ $whiteColor: #ffffff;
     display: flex;
     justify-content: center;
     margin-top: 1.2rem;
+    flex-wrap: wrap;
 }
 .sorting__button {
     &:hover :first-child {
