--- a/movies-imdb/src/Styles/css/Main.css
+++ b/movies-imdb/src/Styles/css/Main.css
@@ -42,6 +42,7 @@ header img {
   display: flex;
   justify-content: center;
   margin-top: 1.2rem;
+  flex-wrap: wrap;
 }
 
 .sorting__button:hover :first-child {
